[package]
name = "korabli-mod-land"
version = "0.1.0"
edition = "2024"

[features]
default = ["git2"]
git2 = ["dep:git2"]

[dependencies]
async-trait = "0.1.87"
axum = "0.8.1"
axum-client-ip = "0.7.0"
axum-macros = "0.5.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
git2 = { version = "0.20.0", optional = true }
headers = "0.4.0"
log = "0.4.26"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full", "rt-multi-thread"] }
toml = "0.8.20"
url = "2.5.4"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
